--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Discover Dublin</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -20,7 +18,6 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse mr-auto" id="navbarNav">
             <ul class="navbar-nav mt-md-0" id="Menu">
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,10 +30,13 @@
                     <a class="nav-link" href="#section-attractions">City Center Attractions</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+                    <a class="nav-link" href="#restaurants">Restaurants | Iconic Pubs</a>
+                </li>
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
                     <a class="nav-link" href="#activities">Outdoor Activites</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-                    <a class="nav-link" href="#">Restaurants | Iconic Pubs</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -50,7 +50,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About Dublin</span></h2>
+                    <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About
+                            Dublin</span></h2>
                     <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the
                         River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin
                         Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the
@@ -76,10 +77,12 @@
         <div class="container">
             <div class="row mt-4 mb-4">
                 <div id="city" class="col-sm-6">
-                    <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
+                    <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center
+                        Attractions</button>
                 </div>
                 <div id="outdoor" class="col-sm-6">
-                    <button id="outdoors" type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
+                    <button id="outdoors" type="button" class="btn btn-danger btn-lg btn-block">The Great
+                        Outdoors</button>
                 </div>
             </div>
             <div id="map"></div>
@@ -90,7 +93,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>City Center Attractions</span></h2>
+                    <h2 class="heading resize-font"><span class="content-border-style"><i
+                                class="fas fa-info-circle"></i>City Center Attractions</span></h2>
                 </div>
             </div>
         </div>
@@ -109,35 +113,49 @@
                         <img class="d-block w-100" src="assets/images/trinity.jpg" alt="trinity college">
                         <div class="carousel-caption d-none d-md-block text-white bg-info">
                             <h5>Trinity College Dublin</h5>
-                            <p>Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.</p>
+                            <p>Visit this esteemed research university and the home of the Book of Kells, the sole
+                                constituent college of the University of Dublin.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/botanic-glasnevin.jpg" alt="glasnevin cemetary">
                         <div class="carousel-caption d-none d-md-block text-white bg-info">
                             <h5>Glasnevin Cemetary</h5>
-                            <p>Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin Cemetery which opened in 1832. It holds the graves and memorials of several notable figures who have helped shaped Irish history and culture, including  Michael Collins, Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland most traditional pubs Gravediggers, located at the rear of the cemetery. .</p>
+                            <p>Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin
+                                Cemetery which opened in 1832. It holds the graves and memorials of several notable
+                                figures who have helped shaped Irish history and culture, including Michael Collins,
+                                Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland
+                                most traditional pubs Gravediggers, located at the rear of the cemetery. .</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/temple-bar.jpg" alt="Temple Bar">
                         <div class="carousel-caption d-none d-md-block text-white bg-info">
                             <h5>Temple Bar</h5>
-                            <p>Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland. The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland Street to the east and Fishamble Street to the west. It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist destination. </p>
+                            <p>Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland.
+                                The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland
+                                Street to the east and Fishamble Street to the west. It is promoted as Dublin's
+                                'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist
+                                destination. </p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/castle-dublin.jpg" alt="Dublin Castle">
                         <div class="carousel-caption d-none d-md-block text-white bg-info">
                             <h5>Dublin Castle</h5>
-                            <p>Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle served for centuries as the headquarters of English, and later British, administration in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to the new Irish government. It is now a major government complex and a key tourist attraction.</p>
+                            <p>Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle
+                                served for centuries as the headquarters of English, and later British, administration
+                                in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to
+                                the new Irish government. It is now a major government complex and a key tourist
+                                attraction.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/brewery.jpg" alt="Guinness Storehouse">
                         <div class="carousel-caption d-none d-md-block text-white bg-info">
                             <h5>Guinness Storehouse</h5>
-                            <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin, Ireland. Since opening in 2000, it has received over twenty million visitors</p>
+                            <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin,
+                                Ireland. Since opening in 2000, it has received over twenty million visitors</p>
                         </div>
                     </div>
                 </div>
@@ -151,67 +169,77 @@
                 </a>
             </div>
         </div>
-        <!--city center attraction heading-->
-    <section id="activites">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 ">
-                    <h2 class="heading resize-font"><span class="content-border-style"><i
-                                class="fas fa-info-circle"></i>Outdoor Activities</span></h2>
-                </div>
-            </div>
-        </div>
-        <!-- Carousel for outdoor activities-->
-        <div class="container">
-            <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
-                    <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="assets/images/phoenix-park.jpg" alt="Phoenix park">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
-                            <h5>Phoenix Park</h5>
-                            <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe. The Phoenix Park is open 24 hrs a day, 7 days a week, all year round. The main gates of the Park at Parkgate Street and Castleknock Gate are open 24 hours.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/howth.jpg" alt="Howth">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
-                            <h5>Howth</h5>
-                            <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs, Dublin Bay, Howth Harbour and an almost aerial view of both the Baily Lighthouse and Howth Harbour Lighthouse. Pubs and restaurants for a break in the middle of the walking route, as well as at the end.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/temple-bar.jpg" alt="Poolbeg Lighthouse">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
-                            <h5>Poolbeg Lighthouse</h5>
-                            <p>The Poolbeg Lighthouse Walk is a gorgeous coastal walk that’ll blow off the thickest of cobwebs.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/castle-dublin.jpg" alt="National Botanic Gardens">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
-                            <h5>National Botanic Gardens</h5>
-                            <p>Ireland's premier garden is a green oasis situated in the leafy suburb of Glasnevin, not far from Dublin city centre. It is just under 50 acres in size and home to over 17,000 different plant species. Famous for its Victorian glasshouse</p>
-                        </div>
+        <!--outdoor heading-->
+        <section id="activites">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 ">
+                        <h2 class="heading resize-font"><span class="content-border-style"><i
+                                    class="fas fa-info-circle"></i>Outdoor Activities</span></h2>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
-        </div>
+            <!-- Carousel for outdoor activities-->
+            <div class="container">
+                <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/images/phoenix-park.jpg" alt="Phoenix park">
+                            <div class="carousel-caption d-none d-md-block text-white bg-info">
+                                <h5>Phoenix Park</h5>
+                                <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe.
+                                    The Phoenix Park is open 24 hrs a day, 7 days a week, all year round. The main gates
+                                    of the Park at Parkgate Street and Castleknock Gate are open 24 hours.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/howth.jpg" alt="Howth">
+                            <div class="carousel-caption d-none d-md-block text-white bg-info">
+                                <h5>Howth</h5>
+                                <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs, Dublin
+                                    Bay, Howth Harbour and an almost aerial view of both the Baily Lighthouse and Howth
+                                    Harbour Lighthouse. Pubs and restaurants for a break in the middle of the walking
+                                    route, as well as at the end.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/poolbeg-lighthouse.jpg" alt="Poolbeg Lighthouse">
+                            <div class="carousel-caption d-none d-md-block text-white bg-info">
+                                <h5>Poolbeg Lighthouse</h5>
+                                <p>The Poolbeg Lighthouse Walk is a gorgeous coastal walk that’ll blow off the thickest
+                                    of cobwebs.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/botanic-greenhouse.jpg"
+                                alt="National Botanic Gardens">
+                            <div class="carousel-caption d-none d-md-block text-white bg-info">
+                                <h5>National Botanic Gardens</h5>
+                                <p>Ireland's premier garden is a green oasis situated in the leafy suburb of Glasnevin,
+                                    not far from Dublin city centre. It is just under 50 acres in size and home to over
+                                    17,000 different plant species. Famous for its Victorian glasshouse</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </section>
         <!--Contact form-->
-        <section>
+        <section id="contact">
             <div class="contact mt-4">
                 <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
                 <p>Let us know if you have any questions about Dublin!</p>
