--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                     <p>Let us know if you have any questions about Dublin!</p>
                 </div>
                 <div class="form-container">
-                    <form>
+                    <form onsubmit="return sendMail(this);" method="POST">
                         <input name="name" type="text" class="form-input" placeholder="Name" />
-                        <input name="email" type="text" class="form-input" placeholder="Email" />
+                        <input name="emailaddress" type="text" class="form-input" placeholder="Email" />
                         <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
                         <input id="contact-button" type="submit" value="Submit" />
                     </form>
@@ -257,6 +257,7 @@
              </div>
         </section>
 </body>
+<script src="assets/js/sendEmail.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
