--- a/index.html
+++ b/index.html
@@ -170,92 +170,93 @@
                 </a>
             </div>
         </div>
-        <!--outdoor heading-->
-        <section id="activities">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 ">
-                        <h2 class="heading resize-font"><span class="content-border-style"><i
-                                    class="fas fa-info-circle"></i>Outdoor Activities</span></h2>
-                    </div>
+    </section>
+    <!--outdoor heading-->
+    <section id="activities">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 ">
+                    <h2 class="heading resize-font"><span class="content-border-style"><i
+                                class="fas fa-info-circle"></i>Outdoor Activities</span></h2>
                 </div>
             </div>
-            <!-- Carousel for outdoor activities-->
-            <div class="container">
-                <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
-                        <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/images/phoenix-park.jpg" alt="Phoenix park">
-                            <div class="carousel-caption d-none d-md-block text-white bg-info">
-                                <h5>Phoenix Park</h5>
-                                <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe.
-                                    The Phoenix Park is open 24 hrs a day, 7 days a week, all year round. The main gates
-                                    of the Park at Parkgate Street and Castleknock Gate are open 24 hours.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/howth.jpg" alt="Howth">
-                            <div class="carousel-caption d-none d-md-block text-white bg-info">
-                                <h5>Howth</h5>
-                                <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs, Dublin
-                                    Bay, Howth Harbour and an almost aerial view of both the Baily Lighthouse and Howth
-                                    Harbour Lighthouse. Pubs and restaurants for a break in the middle of the walking
-                                    route, as well as at the end.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/poolbeg-lighthouse.jpg" alt="Poolbeg Lighthouse">
-                            <div class="carousel-caption d-none d-md-block text-white bg-info">
-                                <h5>Poolbeg Lighthouse</h5>
-                                <p>The Poolbeg Lighthouse Walk is a gorgeous coastal walk that’ll blow off the thickest
-                                    of cobwebs.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/images/botanic-greenhouse.jpg"
-                                alt="National Botanic Gardens">
-                            <div class="carousel-caption d-none d-md-block text-white bg-info">
-                                <h5>National Botanic Gardens</h5>
-                                <p>Ireland's premier garden is a green oasis situated in the leafy suburb of Glasnevin,
-                                    not far from Dublin city centre. It is just under 50 acres in size and home to over
-                                    17,000 different plant species. Famous for its Victorian glasshouse</p>
-                            </div>
+        </div>
+        <!-- Carousel for outdoor activities-->
+        <div class="container">
+            <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/images/phoenix-park.jpg" alt="Phoenix park">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Phoenix Park</h5>
+                            <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe.
+                                The Phoenix Park is open 24 hrs a day, 7 days a week, all year round. The main gates
+                                of the Park at Parkgate Street and Castleknock Gate are open 24 hours.</p>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/howth.jpg" alt="Howth">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Howth</h5>
+                            <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs, Dublin
+                                Bay, Howth Harbour and an almost aerial view of both the Baily Lighthouse and Howth
+                                Harbour Lighthouse. Pubs and restaurants for a break in the middle of the walking
+                                route, as well as at the end.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/poolbeg-lighthouse.jpg" alt="Poolbeg Lighthouse">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Poolbeg Lighthouse</h5>
+                            <p>The Poolbeg Lighthouse Walk is a gorgeous coastal walk that’ll blow off the thickest
+                                of cobwebs.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/botanic-greenhouse.jpg"
+                            alt="National Botanic Gardens">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>National Botanic Gardens</h5>
+                            <p>Ireland's premier garden is a green oasis situated in the leafy suburb of Glasnevin,
+                                not far from Dublin city centre. It is just under 50 acres in size and home to over
+                                17,000 different plant species. Famous for its Victorian glasshouse</p>
+                        </div>
+                    </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-        </section>
-        <!--Contact form-->
-        <section id="contact">
-            <div class="container">
-                <div class="contact mt-4">
-                    <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
-                    <p>Let us know if you have any questions about Dublin!</p>
-                </div>
-                <div class="form-container">
-                    <form onsubmit="return sendMail(this);" method="POST">
-                        <input name="name" type="text" class="form-input" placeholder="Name" />
-                        <input name="emailaddress" type="text" class="form-input" placeholder="Email" />
-                        <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
-                        <input id="contact-button" type="submit" value="Submit" />
-                    </form>
-                </div>
-             </div>
-        </section>
+        </div>
+    </section>
+    <!--Contact form-->
+    <section id="contact">
+        <div class="container">
+            <div class="contact mt-4">
+                <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
+                <p>Let us know if you have any questions about Dublin!</p>
+            </div>
+            <div class="form-container">
+                <form onsubmit="return sendMail(this);">
+                    <input name="name" type="text" class="form-input" placeholder="Name" />
+                    <input name="emailaddress" type="text" class="form-input" placeholder="Email" />
+                    <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
+                    <input id="contact-button" type="submit" value="Submit" />
+                </form>
+            </div>
+            </div>
+    </section>
 </body>
 <script src="assets/js/sendEmail.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
