--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 </form>
             </div>
             </div>
-    </section>git 
+    </section>
 </body>
 <script src="assets/js/sendEmail.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
